Closed
Bug 226162
Opened 22 years ago
Closed 22 years ago
DRefTool analysis for pref files
Categories
(Core :: Preferences: Backend, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
2.56 KB,
patch
|
caillon
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/modules/libpref/src/nsPrefService.cpp&rev=1.73&mark=101#96
Deref-error: "rootBranch"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/modules/libpref/src/nsPrefService.cpp&rev=1.73&mark=268#263
Deref-error: "prefBranch"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/modules/libpref/src/nsPrefService.cpp&rev=1.73&mark=287#282
Deref-error: "prefBranch"
Attachment #135886 -
Flags: superreview?(roc)
Attachment #135886 -
Flags: review?(caillon)
Attachment #135886 -
Flags: superreview?(roc) → superreview+
Updated•22 years ago
|
Attachment #135886 -
Flags: review?(caillon) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•