Bug 226162 DRefTool analysis for pref files r=caillon sr=roc